--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@ textarea {
   resize: none;
 }
 
-.from {
-
+.form {
+  
+  color: #e9e9e9;
+  background: transparent;
+  border: 1px solid #e9e9e9;
+  padding: 15px;
+  width: 100%;
 }
